Fix: Figcaption is hidden by the button inserter in the editor

--- a/src/editor-style.scss
+++ b/src/editor-style.scss
@@ -35,14 +35,37 @@
 		z-index: 1;
 	}
 
-	&.is-selected > table {
+	&.is-selected {
 
-		th,
-		td {
+		> table {
 
-			.block-editor-rich-text__editable {
-				border: 1px dotted #eaeaea;
+			th,
+			td {
+
+				.block-editor-rich-text__editable {
+					border: 1px dotted #eaeaea;
+				}
 			}
+		}
+
+		&.show-dot-on-th th::before {
+			position: absolute;
+			top: 4px;
+			right: 4px;
+			z-index: 1;
+			width: 6px;
+			height: 6px;
+			background: var(--wp-admin-theme-color);
+			border-radius: 50%;
+			content: "";
+		}
+
+		&.show-control-button.is-caption-side-bottom {
+			padding-top: 40px;
+		}
+
+		&.show-control-button.is-caption-side-top > table {
+			margin-top: 40px;
 		}
 	}
 
@@ -67,18 +90,6 @@
 
 	&.is-content-justification-right {
 		align-items: flex-end;
-	}
-
-	&.show-dot-on-th th::before {
-		position: absolute;
-		top: 4px;
-		right: 4px;
-		z-index: 1;
-		width: 6px;
-		height: 6px;
-		background: var(--wp-admin-theme-color);
-		border-radius: 50%;
-		content: "";
 	}
 
 	.ftb-placeholder {
